--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>EXO</title>
         <link rel="stylesheet" href="style.css">
+        <script src="myscripts.js"></script>
     </head>
     <body>
         <h1>EXO</h1>
@@ -11,19 +12,27 @@
     </body>
     <table>
         <td>
-            <a href="https://vscode.dev/" target = "_blank">
-                <img src="Visual_Studio_Code_1.35_icon.svg.png" alt="DON'T FORGET THIS" width = "240" height = "250">
-            </a>
+            
+            <div onclick = "countDown()">
+                <a href="https://vscode.dev/" target = "_blank">
+                    <img src="Visual_Studio_Code_1.35_icon.svg.png" alt="DON'T FORGET THIS" width = "240" height = "250">
+                </a>
+            </div>
+            
+            <div onclick = "countDown()"></div>
+                <a href="https://www.notion.so/" target = "_blank">
+                    <img src="notion-2296040-1911999.webp" alt="DON'T FORGET THIS" width = "240" height = "320">
+                </a>
+            </div>
 
-            <a href="https://www.notion.so/" target = "_blank">
-                <img src="notion-2296040-1911999.webp" alt="DON'T FORGET THIS" width = "240" height = "320">
-            </a>
-
-            <a href="Https://www.youtube.com" target = "_blank">
-                <img src="free-youtube-logo-icon-2431-thumb.png" alt="DON'T FORGET THIS" width = "240" height = "320">
-            </a>
+            <div onclick = "countDown()"></div>
+                <a href="Https://www.youtube.com" target = "_blank">
+                    <img src="free-youtube-logo-icon-2431-thumb.png" alt="DON'T FORGET THIS" width = "240" height = "320">
+                </a>
+            </div>
         </td>
     </table>
 
     <h1>Click an application to begin your study.</h1>
+    <p id = "demo"></p>
 </html>
