Commit made from VS Code Azure Static Web Apps

--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@
     </table>
 
     <h1>Click an application to begin your study.</h1>
+
+    <a href = "new-app.html">
+        <button id = "new-applciation">Add</button>
+    </a>
     <p id = "demo"></p>
 </html>
