--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>EXO</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/css/style.css">
         <script src="myscripts.js"></script>
     </head>
     <body>
@@ -15,7 +15,7 @@
             <td>
                 <div onclick = "countDown()">
                     <a href="https://vscode.dev/" target = "_blank">
-                        <img src="Visual_Studio_Code_1.35_icon.svg.png" alt="DON'T FORGET THIS" width = "120" height = "120">
+                        <img src="/img/Visual_Studio_Code_1.35_icon.svg.png" alt="DON'T FORGET THIS" width = "120" height = "120">
                     </a>
                 </div>
             </td>
@@ -23,7 +23,7 @@
             <td> 
                 <div onclick = "countDown()"></div>
                     <a href="https://www.notion.so/" target = "_blank">
-                        <img src="notion-2296040-1911999.webp" alt="DON'T FORGET THIS" width = "120" height = "120">
+                        <img src="/img/notion-2296040-1911999.webp" alt="DON'T FORGET THIS" width = "120" height = "120">
                     </a>
                 </div>
              </td>
@@ -31,7 +31,7 @@
             <td>
                 <div onclick = "countDown()"></div>
                     <a href="Https://www.youtube.com" target = "_blank">
-                        <img src="free-youtube-logo-icon-2431-thumb.png" alt="DON'T FORGET THIS" width = "120" height = "120">
+                        <img src="/img/free-youtube-logo-icon-2431-thumb.png" alt="DON'T FORGET THIS" width = "120" height = "120">
                     </a>
                 </div>
             </td>
